k8s/k8s-bootsync/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bootsync
  labels:
    app.kubernetes.io/part-of: bootsync
