k8s/k8s-bootsync/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bootsync-service
  namespace: bootsync
  labels:
    app.kubernetes.io/name: bootsync-app
    app.kubernetes.io/part-of: bootsync
spec:
  selector:
    app.kubernetes.io/name: bootsync-app
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
