k8s/k8s-bootsync/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bootsync-ingress
  namespace: bootsync
  labels:
    app.kubernetes.io/name: bootsync-app
    app.kubernetes.io/part-of: bootsync
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* "^/actuator" {
        deny all;
        return 403;
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bootsync.example.com
      secretName: bootsync-tls
  rules:
    - host: bootsync.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bootsync-service
                port:
                  number: 80
